--- a/howitworks.html
+++ b/howitworks.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="cid-rFpqMGXI13 mbr-fullscreen mbr-parallax-background" id="header2-2i">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="cid-rFpqMGXI13 mbr-fullscreen mbr-parallax-background" id="header2-2i">
 
     
 
