--- a/confirm.html
+++ b/confirm.html
@@ -126,6 +126,7 @@
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src=""></script>
   
   
 </body>
