--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Put away all your troubles and start cooking from the get go with Cookit's delic
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="confirm.html" method="POST" class="mbr-form form-with-styler">
+                <form action="confirm.html" class="mbr-form form-with-styler">
                     <div class="row">
                         
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -307,7 +307,7 @@ Put away all your troubles and start cooking from the get go with Cookit's delic
                         <div class="form-group col" data-for="email">
                             <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control display-7" id="email-form3-b">
                         </div>
-                        <div class="col-auto input-group-btn"><button type="submit" class="btn btn-secondary display-4" href="confirm.html">SUBSCRIBE</button></div>
+                        <div class="col-auto input-group-btn"><button class="btn btn-secondary display-4" href="confirm.html">SUBSCRIBE</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
