--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Put away all your troubles and start cooking from the get go with Cookit's delic
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">CooKit</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">&nbsp; &nbsp;Are you hungry and want something to <br>eat in less than 30 minutes?<br>click to know more</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">&nbsp; &nbsp;Are you hungry and want something to <br>eat in less than 30 minutes?<br>Click here to know more!</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="services.html">LEARN MORE</a></div>
             </div>
         </div>
@@ -290,7 +290,7 @@ Put away all your troubles and start cooking from the get go with Cookit's delic
                 <h2 class="align-center pb-2 mbr-fonts-style display-2">
                     SUBSCRIBE FORM
                 </h2>
-                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5"><p>Subscribe to our newsletter today to get a $10 off your first purchase!</p></h3>
+                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5"><p>Subscribe to our newsletter today to get $10 off your first purchase!</p></h3>
             </div>
         </div>
 
