create github pages

--- a/confirm.html
+++ b/confirm.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="cid-rFTeyrhvzY mbr-fullscreen mbr-parallax-background" id="header2-2k">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="cid-rFTeyrhvzY mbr-fullscreen mbr-parallax-background" id="header2-2k">
 
     
 
@@ -126,7 +126,6 @@
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
-
   
   
 </body>
