--- a/howitworks.html
+++ b/howitworks.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/cookitlogo-220x61.png" type="image/x-icon">
   <meta name="description" content="With 3 simple steps, you can cook a scrumptious meal for you and your loved ones in no time! Get Cooking with Cookit!">
   
-  <title>Cookit: How it works</title>
+  <title>How it works | cookit</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="cid-rFpqMGXI13 mbr-fullscreen mbr-parallax-background" id="header2-2i">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="cid-rFpqMGXI13 mbr-fullscreen mbr-parallax-background" id="header2-2i">
 
     
 
