create github pages

--- a/howitworks.html
+++ b/howitworks.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="cid-rFpqMGXI13 mbr-fullscreen mbr-parallax-background" id="header2-2i">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-rFpqMGXI13 mbr-fullscreen mbr-parallax-background" id="header2-2i">
 
     
 
@@ -100,7 +100,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 50%;">
-                    <img src="assets/images/whatsapp-image-2019-10-17-at-9.58.38-pm-952x952.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/meal-plan-kits-952x952.png" alt="Mobirise" title="">
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2"></h2>
@@ -144,7 +144,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 50%;">
-                    <img src="assets/images/whatsapp-image-2019-10-17-at-9.54.03-pm-952x633.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/green-chef-952x633.png" alt="Mobirise" title="">
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2"></h2>
