--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="cid-rFosq9Zoe1 mbr-fullscreen mbr-parallax-background" id="header2-1x">
+<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="cid-rFosq9Zoe1 mbr-fullscreen mbr-parallax-background" id="header2-1x">
 
     
 
@@ -101,8 +101,8 @@
     <div class="container">   
         <div class="col-md-12">
             <div class="media-container-row">
-                <div class="mbr-figure m-auto" style="width: 50%;">
-                    <a href="services.html"><img src="assets/images/avocado-toastt-952x1269.jpeg" alt="Mobirise" title=""></a>
+                <div class="mbr-figure m-auto" style="width: 40%;">
+                    <a href="services.html"><img src="assets/images/avocado-toastt-952x1269.jpg" alt="Mobirise" title=""></a>
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">
