--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rFanBkiZyL mbr-fullscreen mbr-parallax-background" id="header2-16">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-rFanBkiZyL mbr-fullscreen mbr-parallax-background" id="header2-16">
 
     
 
@@ -198,7 +198,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/image18-900x819.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/best-waffle-recipe-660x601.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style"><a href="menu.html">
@@ -213,7 +213,7 @@
                 
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/image5-660x440.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/best-toast-recipe-900x600.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5"><a href="menu.html">
