--- a/aboutus.html
+++ b/aboutus.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-rFTCGNCm8Y mbr-fullscreen" id="header2-39">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="cid-rFTCGNCm8Y mbr-fullscreen" id="header2-39">
 
     
 
@@ -99,7 +99,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 30%;">
-                    <img src="assets/images/whatsapp-image-2019-10-25-at-3.21.10-pm-564x846.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/healthy-bowl-ideas-520x780.jpg" alt="Mobirise" title="">
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-1">
