--- a/aboutus.html
+++ b/aboutus.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="features11 cid-rFTvum8UIc" id="features11-2u">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="features11 cid-rFTvum8UIc" id="features11-2u">
 
     
 
