--- a/howitworks.html
+++ b/howitworks.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="menu cid-rF3ziJVnWI" once="menu" id="menu2-1i">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="menu cid-rF3ziJVnWI" once="menu" id="menu2-1i">
 
     
 
