--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="cid-rFosq9Zoe1 mbr-fullscreen mbr-parallax-background" id="header2-1x">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rFosq9Zoe1 mbr-fullscreen mbr-parallax-background" id="header2-1x">
 
     
 
@@ -74,12 +74,10 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    Hungry!</h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-1"><strong>
-                    Hungry?</strong></h3>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">cooking menu for the week</h1>
+                
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    Let our menus solve your hunger issues</p>
+                    Browse our top-rated recipes crafted by veteran chefs.<br>With simple and easy to follow instructions, anyone can do it!<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="menu.html#features11-1z">LEARN MORE</a></div>
             </div>
         </div>
@@ -105,8 +103,7 @@
                     <a href="services.html"><img src="assets/images/avocado-toastt-952x1269.jpg" alt="Mobirise" title=""></a>
                 </div>
                 <div class=" align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2">
-                        Avocado Toast</h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Avocado toast with eggs</h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">
                         with spinach and a poached egg</p>
@@ -124,8 +121,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">
-                                   A hearty yet easy breakfast that would make anyone's day. Crispy toast topped with creamy avocado, spinach and a poached egg<br><br>*available with standard plan</p>
+                                <p class="block-text mbr-fonts-style display-7">A healthy and easy breakfast that would make anyone's day. Crispy toast topped with creamy avocado, spinach and a poached egg<br><br>*available with standard plan</p>
                             </div>
                         </div>
 
@@ -151,7 +147,7 @@
                     <a href="services.html"><img src="assets/images/steak-img-601x601.jpg" alt="Mobirise" title=""></a>
                 </div>
                 <div class=" align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Strip Steak</h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2">New york strip steak</h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">
                         with mashed potatoes and brown sauce</p>
@@ -170,7 +166,7 @@
 
                             <div class="card-box">
                                 <p class="block-text mbr-fonts-style display-7">
-                                   A classic steak dinner, Beautiful striploin steak with creamy mashed potatoes and carrots. Paird with a buttery brown sauce.<br><br>*available with premium plan</p>
+                                   A classic steak dinner for two, Beautiful striploin steak with creamy mashed potatoes and carrots. Paired with a buttery brown sauce.<br><br>*available with premium plan</p>
                             </div>
                         </div>
 
