--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rFosq9Zoe1 mbr-fullscreen mbr-parallax-background" id="header2-1x">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="cid-rFosq9Zoe1 mbr-fullscreen mbr-parallax-background" id="header2-1x">
 
     
 
@@ -74,7 +74,7 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">cooking menu for the week</h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">Cooking menu for the week</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Browse our top-rated recipes crafted by veteran chefs.<br>With simple and easy to follow instructions, anyone can do it!<br></p>
