--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/cookitlogo-220x61.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <img src="assets/images/cookitlogo-220x61.png" alt="Cookit logo" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
