Alt text for service page

--- a/services.html
+++ b/services.html
@@ -196,7 +196,7 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/best waffle recipe.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/best waffle recipe.jpg" alt="best waffle recipe for beginner" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style"><a href="menu.html">
@@ -211,7 +211,7 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                 
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/best toast recipe.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/best toast recipe.jpg" alt="best toast recipe for beginner" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5"><a href="menu.html">
@@ -225,7 +225,7 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/chinese dumpling recipe.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/chinese dumpling recipe.jpg" alt="chinese dumpling recipe for beginner" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5"><a href="menu.html">
@@ -258,7 +258,7 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
             <div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/satisfied user.jpg">
+                            <img src="assets/images/satisfied user.jpg" >
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7">
