menu page alt text

--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 40%;">
-                    <a href="services.html"><img src="assets/images/avocado-toastt-952x1269.jpg" alt="Mobirise" title=""></a>
+                    <a href="services.html"><img src="assets/images/avocado-toastt-952x1269.jpg" alt="avocado toast recipe with eggs" title=""></a>
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Avocado toast with eggs</h2>
@@ -144,7 +144,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 50%;">
-                    <a href="services.html"><img src="assets/images/steak-img-601x601.jpg" alt="Mobirise" title=""></a>
+                    <a href="services.html"><img src="assets/images/new-york-strip-steak-601x601.jpg" alt="best new york strip steak" title=""></a>
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">New york strip steak</h2>
@@ -189,7 +189,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 50%;">
-                    <a href="services.html"><img src="assets/images/mushroom-soup-602x601.jpg" alt="Mobirise" title=""></a>
+                    <a href="services.html"><img src="assets/images/cream_of_mushroom_soup.jpg" alt="best mushroom soup recipe" title=""></a>
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">
