--- a/contactus.html
+++ b/contactus.html
@@ -109,7 +109,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="contacted.html" method="POST" class="mbr-form form-with-styler">
+                    <form action="contacted.html" class="mbr-form form-with-styler">
                         <div class="row">
                             
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -128,7 +128,7 @@
                             <div data-for="message" class="col-md-12  form-group">
                                 <textarea name="message" placeholder="Message" data-form-field="Message" class="form-control input display-7" id="message-form4-30"></textarea>
                             </div>
-                            <div class="col-md-12 input-group-btn  mt-2 align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="contacted.html">SEND MESSAGE</button></div>
+                            <div class="col-md-12 input-group-btn  mt-2 align-center"><button class="btn btn-primary btn-form display-4" href="contacted.html">SEND MESSAGE</button></div>
                         </div>
                     </form><!---Formbuilder Form--->
                 </div>
