--- a/payment.html
+++ b/payment.html
@@ -94,7 +94,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="confirmation.html" method="POST" class="mbr-form form-with-styler">
+                <form action="confirmation.html" class="mbr-form form-with-styler">
                     <div class="row">
                         
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -117,7 +117,7 @@
                             <label for="message-form1-2o" class="form-control-label mbr-fonts-style display-7">Address</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-2o"></textarea>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="confirmation.html" target="_blank">Check out</button></div>
+                        <div class="col-md-12 input-group-btn align-center"><button class="btn btn-primary btn-form display-4" href="confirmation.html" target="_blank">Check out</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
