--- a/services.html
+++ b/services.html
@@ -212,7 +212,9 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style"><a href="menu.html">
                             Waffle</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            start your day with the perfect<br>waffle. The recipe is currently included in this month's plan</p>
+                            Start your day with a healthy<br>breakfast! Whole-grain waffles topped off with
+                            all <br>organic fruits and yoghurt will be sure to make your <br>day!. 
+                            The recipe is currently included in this month's plan</p>
                     </div>
                 </div>
             </div>
