--- a/services.html
+++ b/services.html
@@ -210,11 +210,12 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style"><a href="menu.html">
-                            Waffle</a></h4>
+                            Whole-Grain Waffles with Fruits</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Start your day with a healthy<br>breakfast! Whole-grain waffles topped off with
-                            all <br>organic fruits and yoghurt will be sure to make your <br>day!. 
-                            The recipe is currently included in this month's plan</p>
+                            all organic <br>fruits and yoghurt will be sure to make your day!<br>
+                        </p>
+                        <p><br>This recipe is included in the basic plan option</p>
                     </div>
                 </div>
             </div>
@@ -227,9 +228,13 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5"><a href="menu.html">
-                            Toast with poach eggs</a></h4>
+                            Avocado Toast with Poached Eggs</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Prefer a light breakfast? no worries have some toast and poach eggs to go with your morning coffee</p>
+                            Like the sound of a hearty brunch? We've got you covered with the ever popular
+                            Avocado Toast with Poached Eggs! This recipe is a classic brunch option and is 
+                            sure to make everyone in the family feel pampered.</p>
+                        <p>
+                            <br>This recipe is included in the standard plan option.</p>
                     </div>
                 </div>
             </div>
@@ -237,13 +242,16 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/chinese dumpling recipe.jpg" alt="chinese dumpling recipe for beginner" title="">
+                        <img src="assets\images\steak-img-601x601.jpg" alt="Classic New York Strip Steak" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5"><a href="menu.html">
-                            Chinese dumplings</a></h4>
+                            New York Striploin Steak</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Chinese dumplings for all the chinese food lovers amongst you.</p>
+                           This timeless classic should never disappear off the dinner table!
+                           Perfect for family dinners, be it on a special occasion or even when you feel like it!
+                           Satisfy everyone at the dinner table with this savoury and hearty treat!</p>
+                        <p><br>This recipe is inckuded in the premium plan options.</p>
                     </div>
                 </div> 
             </div>
