--- a/services.html
+++ b/services.html
@@ -215,7 +215,7 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                             Start your day with a healthy<br>breakfast! Whole-grain waffles topped off with
                             all organic <br>fruits and yoghurt will be sure to make your day!<br>
                         </p>
-                        <p><br>This recipe is included in the basic plan option</p>
+                        <!-- <p><br>This recipe is included in the basic plan option</p> -->
                     </div>
                 </div>
             </div>
@@ -233,8 +233,8 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                             Like the sound of a hearty brunch? We've got you covered with the ever popular
                             Avocado Toast with Poached Eggs! This recipe is a classic brunch option and is 
                             sure to make everyone in the family feel pampered.</p>
-                        <p>
-                            <br>This recipe is included in the standard plan option.</p>
+                        <!-- <p>
+                            <br>This recipe is included in the standard plan option.</p> -->
                     </div>
                 </div>
             </div>
@@ -250,8 +250,8 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                         <p class="mbr-text mbr-fonts-style display-7">
                            This timeless classic should never disappear off the dinner table!
                            Perfect for family dinners, be it on a special occasion or even when you feel like it!
-                           Satisfy everyone at the dinner table with this savoury and hearty treat!</p>
-                        <p><br>This recipe is inckuded in the premium plan options.</p>
+                           <br>Satisfy everyone at the dinner table with this savoury and hearty treat!</p>
+                        <!-- <p><br>This recipe is inckuded in the premium plan options.</p> -->
                     </div>
                 </div> 
             </div>
