--- a/services.html
+++ b/services.html
@@ -249,7 +249,7 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                             New York Striploin Steak</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                            This timeless classic should never disappear off the dinner table!
-                           Perfect for family dinners, be it on a special occasion or even when you feel like it!
+                           Perfect for family dinners and gatherings.
                            <br>Satisfy everyone at the dinner table with this savoury and hearty treat!</p>
                         <!-- <p><br>This recipe is inckuded in the premium plan options.</p> -->
                     </div>
