--- a/services.html
+++ b/services.html
@@ -206,7 +206,7 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/best waffle recipe.jpg" alt="best waffle recipe for beginner" title="">
+                        <img src="assets/images/best waffle recipe.jpg" alt="Whole grain waffles with fresh fruits" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style"><a href="menu.html">
@@ -224,7 +224,7 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                 
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/best toast recipe.jpg" alt="best toast recipe for beginner" title="">
+                        <img src="assets/images/best toast recipe.jpg" alt="Avocado toast with Poached Eggs" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5"><a href="menu.html">
