--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Put away all your troubles and start cooking from the get go with Cookit's delic
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                         Put away all your troubles and start cooking from the get go with Cookit's delicious meal kits.<br>
-                    A wide variety of food recipes available just for you and your loved ones!</p>
+                    We provide a wide variety of food recipes available just for you and your loved ones!</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="howitworks.html">LEARN MORE</a></div>
             </div>
         </div>
