--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Put away all your troubles and start cooking from the get go with Cookit's delic
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">Learn how to put together healthy and delicious meals in minutes!</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                        Put away all your troubles and start cooking from the get go with Cookit's delicious meal kits.<br>
+                        Put away all your troubles and start cooking from the <br>get go with Cookit's delicious meal kits.<br>
                     We provide a wide variety of food recipes available just for you and your loved ones!</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="howitworks.html">LEARN MORE</a></div>
             </div>
