--- a/menu.html
+++ b/menu.html
@@ -89,15 +89,15 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Browse our top-rated recipes crafted by veteran chefs.<br>With simple and easy to follow instructions, anyone can do it!<br></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="menu.html#features11-1z">LEARN MORE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="menu.html#features11-1z">View Menu</a></div>
             </div>
         </div>
     </div>
-    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+    <!-- <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
         <a href="#next">
             <i class="mbri-down mbr-iconfont"></i>
         </a>
-    </div>
+    </div> -->
 </section>
 
 <section class="features11 cid-rFotR6ilP3 mbr-parallax-background" id="features11-1z">
