--- a/menu.html
+++ b/menu.html
@@ -114,7 +114,7 @@
                     <a href="services.html"><img src="assets/images/avocado-toastt-952x1269.jpg" alt="avocado toast recipe with eggs" title=""></a>
                 </div>
                 <div class=" align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Avocado toast with eggs</h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Avocado toast with poached eggs</h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">
                         with spinach and a poached egg</p>
@@ -132,7 +132,10 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">A healthy and easy breakfast that would make anyone's day. Crispy toast topped with creamy avocado, spinach and a poached egg<br><br>*available with standard plan</p>
+                                <p class="block-text mbr-fonts-style display-7">
+                                    A healthy and easy breakfast that would make anyone's day. 
+                                    Crispy toast topped with creamy avocado, spinach and a poached egg<br>
+                                    Perfect for sunday brunch with the family!<br><br>*available with standard plan</p>
                             </div>
                         </div>
 
@@ -177,7 +180,9 @@
 
                             <div class="card-box">
                                 <p class="block-text mbr-fonts-style display-7">
-                                   A classic steak dinner for two, Beautiful striploin steak with creamy mashed potatoes and carrots. Paired with a buttery brown sauce.<br><br>*available with premium plan</p>
+                                   A classic steak dinner for two, Beautiful striploin steak with creamy mashed potatoes and carrots. 
+                                   Paired with a buttery brown sauce.<br>
+                                   Make dinners more exciting with this timeless dish.<br><br>*available with premium plan</p>
                             </div>
                         </div>
 
