--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ Put away all your troubles and start cooking from the get go with Cookit's delic
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h3 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Don't think, just eat</h3>
+                <h3 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Happy Chinese New Year!</h3>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">&nbsp;Are you hungry and want something to eat for dinner in less than 30 minutes? <br>Try our meal kit subscription, it is the perfect solution for you!</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">&nbsp; Best wishes from the Cookit Team, <br> We have a chinese new year special meal kit subscription <br>Find out more at the link below!</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="services.html">LEARN MORE</a></div>
             </div>
         </div>
