--- a/services.html
+++ b/services.html
@@ -161,6 +161,32 @@ Just select a plan and get meal kits delivered to your home whenever you want.">
                 </div>
             </div>
 
+            <div class="plan col-12 mx-2 my-2 justify-content-center col-lg-4">
+                <div class="plan-header text-center pt-5">
+                    <h3 class="plan-title mbr-fonts-style display-5">
+                        Chinese new year special</h3>
+                    <div class="plan-price">
+                        <span class="price-value mbr-fonts-style display-5">
+                            $
+                        </span>
+                        <span class="price-figure mbr-fonts-style display-1" style="color: rgb(211, 27, 27);">
+                            28</span>
+                        <small class="price-term mbr-fonts-style display-7">
+                            per delivery</small>
+                    </div>
+                </div>
+                <div class="plan-body">
+                    <div class="plan-list align-center">
+                        <ul class="list-group list-group-flush mbr-fonts-style display-7">
+                            <li class="list-group-item">The chinese new year special plan provides servings for 3-4 people, a great way to stay healthy during the festive season!</li>
+                            <li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;">Access to recipe library</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;">Family option</span><br></li>
+                        </ul>
+                    </div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="payment.html" class="btn btn-primary display-4">BUY NOW</a></div>
+                </div>
+            </div>
+
+
             <div class="plan col-12 mx-2 my-2 justify-content-center favorite col-lg-4">
                 <div class="plan-header text-center pt-5">
                     <h3 class="plan-title mbr-fonts-style display-5">
